# ARC

./: README.md
devel/: .catkin  .rosinstall
devel/lib/lego_loam/: featureAssociation  imageProjection  mapOptmization  transformFusion
devel/lib/pkgconfig/: cloud_msgs.pc  gazebo_env.pc  jackal_control.pc  jackal_description.pc  jackal_navigation.pc  lego_loam.pc  planning.pc  pointcloud_to_laserscan.pc
devel/lib/planning/: a_star_planner_node  rrt_planner_node
devel/lib/pointcloud_to_laserscan/: laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
devel/share/cloud_msgs/cmake/: cloud_msgs-msg-paths.cmake  cloud_msgsConfig.cmake
devel/share/gazebo_env/cmake/: gazebo_envConfig.cmake
devel/share/jackal_control/cmake/: jackal_controlConfig.cmake
devel/share/jackal_description/cmake/: jackal_descriptionConfig.cmake
devel/share/jackal_navigation/cmake/: jackal_navigationConfig.cmake
devel/share/lego_loam/cmake/: lego_loamConfig.cmake
devel/share/planning/cmake/: planningConfig.cmake
devel/share/pointcloud_to_laserscan/cmake/: pointcloud_to_laserscanConfig.cmake
devel/share/roseus/ros/cloud_msgs/: manifest.l
install/: local_setup.sh  setup.sh
install/include/planning/: a_star_global_planner.h
install/lib/pkgconfig/: jackal_control.pc  jackal_navigation.pc  lego_loam.pc  planning.pc
install/lib/pointcloud_to_laserscan/: laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
install/share/gazebo_env/: package.xml
install/share/jackal_description/launch/: description.launch
install/share/jackal_description/urdf/: accessories.urdf.xacro
install/share/jackal_navigation/launch/include/: move_base.launch
install/share/jackal_navigation/params/: costmap_common_params.yaml
install/share/planning/: package.xml  planning_plugins.xml
install/share/planning/cmake/: planningConfig.cmake
install/share/pointcloud_to_laserscan/launch/: jackal_laserscan_to_pointcloud_node.launch
src/gazebo_env/: CMakeLists.txt
src/gazebo_env/launch/: jackal_spawn.launch  jackal_world.launch
src/gazebo_env/worlds/floor/map/: map.yaml
src/gazebo_env/worlds/ignc/worlds/: ignc.world
src/gazebo_env/worlds/map5/worlds/: map5.world
src/gazebo_env/worlds/map7/map/: map.yaml
src/gazebo_env/worlds/me5413/map/: map.pgm  map.yaml
src/gazebo_env/worlds/outdoor/map/: map.yaml
src/gazebo_env/worlds/outdoor/worlds/: outdoor.world
src/jackal/jackal_navigation/launch/include/: gmapping.launch  move_base.launch
src/jackal/jackal_navigation/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml  mpc_local_planner_params.yaml  teb_local_planner_params.yaml
src/jackal/jackal_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/jackal/jackal_navigation/params/odom_nav_params/: global_costmap_params.yaml
src/planning/: CMakeLists.txt  planner_plugins.xml
src/planning/config/: planning.rviz
src/planning/include/planning/: astar_planner.h  rrtstar_planner.h
src/planning/launch/: jackal_nav.launch  jackal_slam_nav.launch  map_save.launch
src/planning/scripts/: pub_goal.py
src/planning/src/: astar_planner.cpp  rrtstar_planner.cpp
src/pointcloud_to_laserscan-lunar-devel/launch/: jackal_laserscan_to_pointcloud_node.launch  test_laserscan_to_pointcloud_node.launch
src/scripts/: error_analysis.py  path_analysis.py
